# urvim

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  benchmarks.md  plan.md
.opencode/: .gitignore
benches/: indent_scope_index.rs  marker_store.rs  syntax_cache_compare.rs  syntax_highlighter.rs  syntax_tokenizer_html.rs  syntax_tokenizer_rust.rs  text_storage.rs
crates/urvim/: Cargo.toml
crates/urvim/examples/: dump_tokens.rs
crates/urvim/src/: actions.rs  app.rs  main.rs  render.rs  startup.rs  tests.rs
crates/urvim/src/plugin/: api.rs  callbacks.rs  confirmations.rs  event.rs  fs.rs  health.rs  inputs.rs  jobs.rs  mod.rs  pickers.rs  plugin_events.rs  timers.rs
crates/urvim/src/plugin/conversion/: mod.rs
crates/urvim/src/plugin/host/: env.rs  filetypes.rs  fs.rs  inspect.rs  json.rs  keymaps.rs  lists.rs  mod.rs  panes.rs  path.rs  project.rs  registers.rs  strings.rs  syntax.rs  themes.rs  ui.rs
crates/urvim/src/plugin/host/buffer_ghost_text/: mod.rs
crates/urvim/src/plugin/host/buffer_highlights/: mod.rs
crates/urvim/src/plugin/host/buffer_virtual_text/: mod.rs
crates/urvim/src/plugin/host/ui/: confirmations.rs  inputs.rs  line_format.rs  mod.rs  overlays.rs  panes.rs  pickers.rs  windows.rs
crates/urvim_core/: Cargo.toml
crates/urvim_core/benches/: indent_scope_index.rs  marker_store.rs  syntax_cache_compare.rs  syntax_highlighter.rs  syntax_tokenizer_html.rs  syntax_tokenizer_rust.rs  text_storage.rs
crates/urvim_core/examples/: cursor_demo.rs  osc52_clipboard.rs  styling_demo.rs  text_sizing.rs
crates/urvim_core/examples/plugins/demo-plugin/src/demo_plugin/: __init__.py  __main__.py
crates/urvim_core/src/: action.rs  config.rs  diagnostics.rs  event.rs  globals.rs  jumplist.rs  lib.rs  logger.rs  path.rs  register.rs  screen.rs  status_bar.rs  widget.rs
crates/urvim_core/src/background/: error.rs  event.rs  handle.rs  manager.rs  mod.rs  token.rs
crates/urvim_core/src/buffer/: boundary.rs  comment.rs  cursor.rs  edit.rs  indent.rs  io.rs  mod.rs  operator_target.rs  pool.rs  search.rs  surround.rs  syntax.rs  tab.rs  tests.rs  text_object.rs  undo.rs
crates/urvim_core/src/buffer/diff/: mod.rs
crates/urvim_core/src/buffer/marker/: mod.rs
crates/urvim_core/src/buffer/tests/: markers.rs
crates/urvim_core/src/buffer/tests/syntax/: bash.rs  bearscript.rs  c.rs  cmake.rs  cpp.rs  csharp.rs  css.rs  dart.rs  dockerfile.rs  elixir.rs  erlang.rs  fish.rs  fsharp.rs  go.rs  haskell.rs  html.rs  java.rs  javascript.rs  json.rs  julia.rs  justfile.rs  kotlin.rs  makefile.rs  markdown.rs  mod.rs  nim.rs  ocaml.rs  perl.rs  php.rs  powershell.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  shell.rs  swift.rs  toml.rs  typescript.rs  yaml.rs  (+2 more)
crates/urvim_core/src/buffer/text/: mod.rs
crates/urvim_core/src/cli/: mod.rs
crates/urvim_core/src/command/: catalog.rs  highlight.rs  mod.rs  registry.rs
crates/urvim_core/src/editor/: action.rs  insert.rs  keymap.rs  mod.rs  mode.rs  replace.rs  resizing.rs  tests.rs  visual.rs  visual_common.rs  visual_line.rs
crates/urvim_core/src/editor/normal/: bindings.rs  mod.rs
crates/urvim_core/src/editor/text_object/: mod.rs
crates/urvim_core/src/editor_pane/: mod.rs  session.rs  tests.rs
crates/urvim_core/src/editor_tab/: commands.rs  mod.rs  motions.rs  render.rs  session.rs  tests.rs  widget.rs
crates/urvim_core/src/editor_tab/buffer_view/: fold.rs  mod.rs  session.rs  view.rs
crates/urvim_core/src/editor_tab/renderer/: mod.rs
crates/urvim_core/src/event/: mod.rs  transaction.rs
crates/urvim_core/src/icon/: mod.rs
crates/urvim_core/src/layout/: command_line.rs  completion.rs  confirmation.rs  dialogs.rs  geometry.rs  hover.rs  input_box.rs  insert_session.rs  keymap.rs  lsp_rename.rs  mod.rs  node.rs  render.rs  session.rs  tests.rs  tree.rs
crates/urvim_core/src/layout/picker/: buffer.rs  code_actions.rs  colorscheme.rs  doc_symbols.rs  file.rs  filetype.rs  git.rs  grep.rs  mod.rs  plugin.rs  references.rs
crates/urvim_core/src/lsp/: builtin.rs  diagnostics.rs  documents.rs  inlay_hint_job.rs  mod.rs  position.rs
crates/urvim_core/src/lsp/runtime/: completion.rs  effects.rs  mod.rs  symbols.rs
crates/urvim_core/src/motion/: bracket_matcher.rs
crates/urvim_core/src/notification/: banner.rs  mod.rs  widget.rs
crates/urvim_core/src/session/: format.rs  mod.rs
crates/urvim_core/src/ui/: confirmation_box.rs  diagnostic_hover.rs  floating_window.rs  geometry.rs  hover.rs  input_box.rs  inputs.rs  key_guide.rs  line_format.rs  lsp_rename.rs  mod.rs  text_width.rs
crates/urvim_core/src/ui/completion/: job.rs  render.rs  widget.rs
crates/urvim_core/src/ui/completion/sources/: buffer_words.rs
crates/urvim_core/src/ui/overlay/: frame.rs  mod.rs
crates/urvim_core/src/ui/picker/: buffer.rs  code_actions.rs  colorscheme.rs  doc_symbols.rs  file.rs  filetype.rs  git.rs  grep.rs  line.rs  mod.rs  plugin.rs  preview.rs  query.rs  references.rs
crates/urvim_core/src/ui/picker/git/: tests.rs
crates/urvim_core/src/ui/plugin_pane/: mod.rs
crates/urvim_core/src/ui/plugin_window/: mod.rs
crates/urvim_core/src/window/: commands.rs  mod.rs  render.rs  session.rs  tests.rs  widget.rs
crates/urvim_core/src/window/buffer_view/: fold.rs  view.rs
crates/urvim_core/src/window_group/: mod.rs  tests.rs
crates/urvim_core/tests/: marker_chunked_cow_parity.rs
crates/urvim_lsp/: Cargo.toml
crates/urvim_lsp/src/: config.rs  diagnostics.rs  document.rs  lib.rs  position.rs
crates/urvim_lsp/src/runtime/: capabilities.rs  mod.rs  requests.rs  session.rs  workspace_edit.rs
crates/urvim_syntax/fixtures/: CMakeLists.txt  Dockerfile  Makefile  bearscript.bear  c.c  csharp.cs  css.css  erlang.erl  fsharp.fs  go.go  javascript.js  justfile  kotlin.kt  nim.nim  ocaml.ml  php.php  powershell.ps1  todo_markers.rs  yaml.yaml
docs/: background-jobs.md  commands.md  config.md  motions.md  phase2.md  plugin-protocol.md  plugins.md  registers.md  todos.md
examples/: cursor_demo.rs  osc52_clipboard.rs  styling_demo.rs  text_sizing.rs
fixtures/: bracket_test.txt  long_lines.txt  wide_chars.txt  (+2 more)
(+1034 files in other folders)
