[package]
name = "urvim"
version = "0.1.0"
edition = "2024"

[dependencies]
rustix = { version = "0.38", features = ["termios", "event", "fs"] }
is-terminal = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
signal-hook = "0.3"
terminal_size = "0.2"
base64 = "0.22"
imbl = "7.0.0"
smol_str = "0.3"
unicode-segmentation = "1.11"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
ignore = "0.4"
lsp-types = "0.97"
url = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "text_storage"
harness = false

[[bench]]
name = "indent_scope_index"
harness = false
