[workspace]
members = ["crates/urvim", "crates/urvim_core", "crates/urvim_terminal", "crates/urvim_json_rpc", "crates/urvim_theme", "crates/urvim_syntax", "crates/urvim_plugin", "crates/urvim_text", "crates/urvim_diff", "crates/urvim_unicode", "crates/urvim_path", "crates/urvim_background", "crates/urvim_lsp", "crates/urvim_id"]
default-members = ["crates/urvim"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
