[package]
name = "urvim_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
urvim_id = { path = "../urvim_id" }
urvim_text = { path = "../urvim_text" }
urvim_json_rpc = { path = "../urvim_json_rpc" }
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tracing = "0.1"